fix button background

--- a/src/components/layers/main/home.css
+++ b/src/components/layers/main/home.css
@@ -20,7 +20,7 @@ li.bread :hover {
 .stools-image{
     object-fit: cover;
 }
-.btn{
+.btn-prud{
     background-color: #ebebeb;
 }
 button.btn:hover {
