--- a/src/components/layers/main/category/category.css
+++ b/src/components/layers/main/category/category.css
@@ -4,3 +4,7 @@
 .item-body {
     background-color: rgb(204, 204, 204);
 }
+.btn-category:hover .btn-icon {
+    transform: translateX(10px);
+    transition: 300ms;
+}
