--- a/src/components/layers/main/home.css
+++ b/src/components/layers/main/home.css
@@ -15,6 +15,8 @@ li.bread :hover {
 .crumbDiv{
     height: 30px;
 }
-button.btn:hover {
-    background-color: #b9b9b9;
+
+button.btn-header:hover .btn-icon {
+    transform: translateX(10px);
+    transition: 300ms;
   }
